--- a/actors.html
+++ b/actors.html
@@ -42,9 +42,9 @@
             Name<br>
             <br>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
-            <br>Years<br>
+            <br>Nationality<br>
             <br>
-            <input type="text" id="years" name="years" placeholder="Years" required autofocus>
+            <input type="text" id="nationality" name="nationality" placeholder="Nationality" required autofocus>
             <br>
             <br>Film<br>
             <br>
